--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ai": "^3.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "langchain": "^0.3.11",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
