--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.0.0",
     "react-toastify": "^9.1.3",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.19",
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
