--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -21,7 +21,13 @@ jobs:
         
     - name: Install dependencies
       run: yarn install
-      
+    
+    - name: Run lint
+      run: yarn lint
+
     - name: Build
       run: yarn build
+
+    - name: Run tests
+      run: yarn test
 
