--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tippy.js": "^6.3.7",
     "use-stick-to-bottom": "^1.0.44",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
