Update workflow to run Supabase emulator

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -21,7 +21,58 @@ jobs:
         
     - name: Install dependencies
       run: yarn install
-    
+
+    - name: Install Docker
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo systemctl start docker
+        sudo systemctl enable docker
+
+    - name: Install Supabase CLI
+      run: |
+        curl -fsSL https://github.com/supabase/cli/releases/download/v1.145.0/supabase_1.145.0_linux_amd64.tar.gz | tar xz
+        sudo mv supabase /usr/local/bin/
+
+    - name: Start Supabase emulator and capture service role key
+      id: supabase
+      run: |
+        # Start Supabase and capture the output
+        OUTPUT=$(supabase start 2>&1)
+        echo "$OUTPUT"
+        
+        # Extract the service role key from the output
+        SERVICE_ROLE_KEY=$(echo "$OUTPUT" | grep -oP "service_role key: \K[^ ]+")
+        echo "SERVICE_ROLE_KEY=$SERVICE_ROLE_KEY" >> $GITHUB_ENV
+      env:
+        SUPABASE_PROJECT_ID: test
+        SUPABASE_DB_PASSWORD: test
+
+    - name: Wait for Supabase to be ready
+      run: |
+        for i in {1..30}; do
+          if curl -s http://localhost:54321/rest/v1/ > /dev/null; then
+            echo "Supabase is ready!"
+            exit 0
+          fi
+          echo "Waiting for Supabase to be ready... (attempt $i/30)"
+          sleep 2
+        done
+        echo "Supabase failed to start within 60 seconds"
+        exit 1
+
+    - name: Run migrations
+      run: |
+        supabase db reset
+
+    - name: Run document ingestion
+      run: |
+        yarn ingest
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        SUPABASE_URL: http://localhost:54321
+        SUPABASE_PRIVATE_KEY: ${{ env.SERVICE_ROLE_KEY }}
+
     - name: Run lint
       run: yarn lint
 
@@ -30,4 +81,11 @@ jobs:
 
     - name: Run tests
       run: yarn test
+      env:
+        SUPABASE_URL: http://localhost:54321
+        SUPABASE_PRIVATE_KEY: ${{ env.SERVICE_ROLE_KEY }}
+
+    - name: Stop Supabase emulator
+      if: always()
+      run: supabase stop
 
