--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-next": "13.4.12",
     "postcss": "8.4.31",
     "prettier": "^3.4.2",
+    "supabase": "^2.20.12",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
