--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ LANGCHAIN_CALLBACKS_BACKGROUND=false
 SUPABASE_PRIVATE_KEY="YOUR_SUPABASE_PRIVATE_KEY"
 SUPABASE_URL="YOUR_SUPABASE_URL"
 
+NEXT_PUBLIC_API_KEY="YOUR_API_KEY"
+
 # Optional: For Tracing with LangSmith
 # LANGCHAIN_TRACING_V2=true
 # LANGCHAIN_API_KEY=YOUR_API_KEY
