--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
