--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ SUPABASE_PRIVATE_KEY="YOUR_SUPABASE_PRIVATE_KEY"
 SUPABASE_URL="YOUR_SUPABASE_URL"
 
 NEXT_PUBLIC_API_KEY="YOUR_API_KEY"
+NEXT_PUBLIC_SUPABASE_URL="http://localhost:54321"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
 
 # Optional: For Tracing with LangSmith
 # LANGCHAIN_TRACING_V2=true
