--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.473.0",
     "next": "^15.3.3",
     "next-themes": "^0.4.4",
+    "openai": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
