--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"app\"",
-    "test": "npm run test:ingest",
-    "test:ingest": "node ingest.test.mjs",
+    "test": "yarn test:unit && yarn test:database",
+    "test:unit": "yarn test:ingest && yarn test:optimize",
+    "test:database": "node tests/database.test.mjs",
+    "test:ingest": "node tests/ingest.test.mjs",
+    "test:optimize": "node tests/optimize.test.mjs",
     "test:app": "echo \"App tests not yet configured\" && exit 0",
-    "ingest": "node ingest.mjs"
+    "test:all": "yarn test:unit && yarn test:database && yarn test:app",
+    "ingest": "node scripts/ingest.mjs",
+    "optimize": "node scripts/optimize.mjs",
+    "optimize:verify": "node scripts/optimize.mjs --skip-verify"
   },
   "engines": {
     "node": ">=18"
@@ -27,8 +33,8 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.32.0",
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
@@ -65,7 +71,7 @@
     "eslint-config-next": "13.4.12",
     "postcss": "8.4.31",
     "prettier": "^3.4.2",
-    "supabase": "^2.20.12",
+    "supabase": "latest",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
